adds helpers and more middleware setup

--- a/views/index.pug
+++ b/views/index.pug
@@ -1,8 +1,4 @@
-doctype html
-html(lang='en')
- head
-   title Hello, World!
- body
-   h1 Hello, World!
-   div.remark
-     p Pug rocks!
+extends layout
+
+block content
+    p hi
