--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,6 +4,7 @@ html(lang='en')
     title= `${h.siteName}`
     link(rel='stylesheet', href='/dist/style.css')
     link(rel="shortcut icon" type="image/png" href="/images/icons/favicon.png")
+    link(rel='stylesheet', href='https://use.fontawesome.com/63b918bac0.css' media="all")
     meta(name="viewport" content="width=device-width, initial-scale=1")
   body
     block header
@@ -16,3 +17,4 @@ html(lang='en')
 
     block scripts
       script(src="/dist/App.bundle.js")
+      script(str="https://use.fontawesome.com/63b918bac0.js")
