committing progress on this branch before refactoring

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,4 +1,5 @@
 @import "./partials/normalize";
 @import "./partials/header";
+@import "./partials/footer";
 @import "./partials/form";
 @import "./partials/misc";
