--- a/views/layout.pug
+++ b/views/layout.pug
@@ -14,8 +14,15 @@ html(lang='en')
           h1 Instapaper
     .content
       main
+        h2 Search Instagram Handle
         block content
-
+    block footer
+      footer
+        span.copyright 
+          span Made with
+          span 
+            i.fa.fa-heart
+          span  by Eric Smith
     block scripts
       script(src="/dist/App.bundle.js")
       script(str="https://use.fontawesome.com/63b918bac0.js")
