--- a/public/sass/partials/_misc.scss
+++ b/public/sass/partials/_misc.scss
@@ -10,3 +10,9 @@ main{
     left: 50%;
     transform: translate(-50%, -30%);
 }
+
+h2 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 26px;
+    text-align: center;
+}
