--- a/public/sass/partials/_misc.scss
+++ b/public/sass/partials/_misc.scss
@@ -13,6 +13,7 @@ main{
 
 h2 {
     font-family: 'Roboto', sans-serif;
-    font-size: 26px;
+    font-size: 2.6rem;    
+    font-weight: 500;
     text-align: center;
 }
