--- a/public/sass/partials/_normalize.scss
+++ b/public/sass/partials/_normalize.scss
@@ -1,4 +1,4 @@
-  @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap');
 
 html{
     box-sizing: border-box;
