--- a/views/preview.pug
+++ b/views/preview.pug
@@ -4,6 +4,6 @@ block content
     .preview
         each image in account.imageSources
             img.preview_img(src=`${image}` draggable="true")
-    button.btn.stitch
+    button.btn.stitch(data-handle=`${account.handle}`)
         span Stitch It!
         i.fa.fa-arrow-circle-up
