add some styles to download view and refactor a few things

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1,7 +1,10 @@
+@import "./mixins/card";
+
 @import "./partials/normalize";
 @import "./partials/header";
 @import "./partials/footer";
 @import "./partials/form";
 @import "./partials/misc";
 @import "./partials/preview";
+@import "./partials/download";
 @import "./partials/buttons";
