--- a/public/sass/mixins/_card.scss
+++ b/public/sass/mixins/_card.scss
@@ -1,5 +1,4 @@
-.preview{
-    /*
+@mixin card {
     width: 270px;
     margin: 0 auto;
     -webkit-box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
@@ -7,19 +6,4 @@
     box-shadow: 0px 4px 13px 0px rgba(0,0,0,0.75);
     border-radius: 2.5px;
     overflow: hidden;
-    */
-    @include card;
-
-    &:after{
-        content: '';
-        display: table;
-        clear: both;
-    }
-
-    &_img{
-        float: left;
-        cursor: pointer;
-        width: 90px;
-        height: 90px;
-    }
-}
+  }
