--- a/views/download.pug
+++ b/views/download.pug
@@ -3,7 +3,8 @@ extends layout
 include mixins/_downloadForm
 
 block content
+    - const finalImagePath = finalImage.split('public/')[1];
     .download
-        img.download_img(src=`${finalImage.split('public/')[1]}` draggable="true")
+        img.download_img(src=`${finalImagePath}` draggable="true")
     
-    +downloadForm(finalImage.split('public/')[1])
+    +downloadForm(finalImagePath)
