post initial request from front end + a bunch of refactoring that should be in seperate commits

--- a/views/mixins/_searchForm.pug
+++ b/views/mixins/_searchForm.pug
@@ -1,6 +1,6 @@
 mixin searchForm()
 
-    form#search-handle(action="/scrape" METHOD="POST")
+    form#search-handle
         label(for="search") Search
         input(type="text" name="search" id="search" placeholder="Search..." autocomplete="off")
         button(type="submit")
