add error message for invalid handle + few tweaks to layout and h2 text values on different views

--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -4,6 +4,7 @@
 @import "./partials/header";
 @import "./partials/footer";
 @import "./partials/form";
+@import "./partials/search-error";
 @import "./partials/misc";
 @import "./partials/preview";
 @import "./partials/download";
