--- a/views/notAvailable.pug
+++ b/views/notAvailable.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-    h2 Ooops, looks like this account is private or has insufficient posts
+    h2 Ooops, looks like this account is private, has insufficient posts, or doesn't exist
     a.btn(href='/')
         span Back
         i.fa.fa-arrow-left
