--- a/public/sass/partials/_misc.scss
+++ b/public/sass/partials/_misc.scss
@@ -17,3 +17,16 @@ h2 {
     font-weight: 500;
     text-align: center;
 }
+
+//stacked styles
+.stacked{
+    
+    .content{
+        min-height: auto;
+    }
+
+    main{
+        position: static;
+        transform: none;
+    }
+}
