--- a/public/sass/partials/_normalize.scss
+++ b/public/sass/partials/_normalize.scss
@@ -13,5 +13,10 @@ html{
 
 body {
     margin: 0;
-    overflow-x: hidden;
+    overflow: hidden;
+
+    &.stacked{
+        overflow-x: hidden;
+        overflow-y: scroll;
+    }
 }
